force-app/main/default/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>course__c</fullName>
        <label>Course</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>joindate__c</fullName>
        <label>Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>